Fix <br> height expansion on small devices

--- a/site/public/css/admin-gradeable.css
+++ b/site/public/css/admin-gradeable.css
@@ -87,7 +87,7 @@ select {
     flex-wrap: wrap;
     align-items: center;
     gap: 4px;
-    margin: -10px 0px 10px 0px;
+    margin: 10px 0px;
 }
 
 .bucket-size-input {
